cleaned more mess and updated example script for existing repo... getting ready to tie into GUI

--- a/app.ipynb
+++ b/app.ipynb
@@ -18,6 +18,7 @@
     "#import dash_table\n",
     "import pandas as pd\n",
     "import plotly.graph_objects as go\n",
+    "import wpv\n",
     "#import plotly.express as px\n",
     "\n",
     "#print([{\"name\": i, \"id\": i} for i in df.columns])\n",
@@ -76,6 +77,19 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Material': {'options': [{'label': 'a', 'value': 'a'},\n",
+       "   {'label': 'b', 'value': 'b'},\n",
+       "   {'label': 'c', 'value': 'c'}]},\n",
+       " 'PV': {'options': [{'label': 'Yes', 'value': True},\n",
+       "   {'label': 'No', 'value': False}]}}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -87,6 +101,8 @@
     "server = app.server\n",
     "\n",
     "#ART_fig = \n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "app.layout = dbc.Container([\n",
