updating wpv for integration with GUI. Changes probably broke all existing scripts but can be fixed by changing Layer instatiations

--- a/app.ipynb
+++ b/app.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "id": "097d6073",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'label': 'Low Fe Glass', 'value': 'nkLowFeGlass.csv'}, {'label': 'FTO', 'value': 'nkFTO.csv'}, {'label': 'MAPI', 'value': 'nkMAPI.csv'}]\n"
+     ]
+    }
+   ],
    "source": [
     "from jupyter_dash import JupyterDash\n",
     "from dash import html, dcc, Input, Output, State\n",
     "from dash import dash_table, callback_context\n",
+    "import numpy as np\n",
     "#from dash.dependencies import Input, Output\n",
     "#import dash_html_components as html\n",
     "#import dash_core_components as dcc\n",
@@ -23,12 +32,19 @@
     "\n",
     "#print([{\"name\": i, \"id\": i} for i in df.columns])\n",
     "\n",
-    "#JupyterDash.infer_jupyter_proxy_config()"
+    "#JupyterDash.infer_jupyter_proxy_config()\n",
+    "\n",
+    "matmap = {'Low Fe Glass':'nkLowFeGlass.csv',\n",
+    "          'FTO':'nkFTO.csv',\n",
+    "          'MAPI':'nkMAPI.csv',\n",
+    "         }\n",
+    "matoptions = [{'label': i, 'value': matmap[i]} for i in matmap]\n",
+    "print(matoptions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "id": "497319a1",
    "metadata": {},
    "outputs": [
@@ -46,7 +62,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x141032cd0>"
+       "<IPython.lib.display.IFrame at 0x175fcbb80>"
       ]
      },
      "metadata": {},
@@ -55,9 +71,10 @@
     {
      "data": {
       "text/plain": [
-       "{'Material': {'options': [{'label': 'a', 'value': 'a'},\n",
-       "   {'label': 'b', 'value': 'b'},\n",
-       "   {'label': 'c', 'value': 'c'}]},\n",
+       "{'Material': {'options': [{'label': 'Low Fe Glass',\n",
+       "    'value': 'nkLowFeGlass.csv'},\n",
+       "   {'label': 'FTO', 'value': 'nkFTO.csv'},\n",
+       "   {'label': 'MAPI', 'value': 'nkMAPI.csv'}]},\n",
        " 'PV': {'options': [{'label': 'Yes', 'value': True},\n",
        "   {'label': 'No', 'value': False}]}}"
       ]
@@ -66,11 +83,25 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=======================================\n",
+      "I am a stack with the following layers:\n",
+      "=======================================\n",
+      "  Layer 1\n",
+      "    Material: nkLowFeGlass.csv\n",
+      "    Thickness: 4000\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'Material': {'options': [{'label': 'a', 'value': 'a'},\n",
-       "   {'label': 'b', 'value': 'b'},\n",
-       "   {'label': 'c', 'value': 'c'}]},\n",
+       "{'Material': {'options': [{'label': 'Low Fe Glass',\n",
+       "    'value': 'nkLowFeGlass.csv'},\n",
+       "   {'label': 'FTO', 'value': 'nkFTO.csv'},\n",
+       "   {'label': 'MAPI', 'value': 'nkMAPI.csv'}]},\n",
        " 'PV': {'options': [{'label': 'Yes', 'value': True},\n",
        "   {'label': 'No', 'value': False}]}}"
       ]
@@ -79,17 +110,71 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=======================================\n",
+      "I am a stack with the following layers:\n",
+      "=======================================\n",
+      "  Layer 1\n",
+      "    Material: nkLowFeGlass.csv\n",
+      "    Thickness: 4000\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'Material': {'options': [{'label': 'a', 'value': 'a'},\n",
-       "   {'label': 'b', 'value': 'b'},\n",
-       "   {'label': 'c', 'value': 'c'}]},\n",
+       "{'Material': {'options': [{'label': 'Low Fe Glass',\n",
+       "    'value': 'nkLowFeGlass.csv'},\n",
+       "   {'label': 'FTO', 'value': 'nkFTO.csv'},\n",
+       "   {'label': 'MAPI', 'value': 'nkMAPI.csv'}]},\n",
        " 'PV': {'options': [{'label': 'Yes', 'value': True},\n",
        "   {'label': 'No', 'value': False}]}}"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=======================================\n",
+      "I am a stack with the following layers:\n",
+      "=======================================\n",
+      "  Layer 1\n",
+      "    Material: nkLowFeGlass.csv\n",
+      "    Thickness: 4000\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Material': {'options': [{'label': 'Low Fe Glass',\n",
+       "    'value': 'nkLowFeGlass.csv'},\n",
+       "   {'label': 'FTO', 'value': 'nkFTO.csv'},\n",
+       "   {'label': 'MAPI', 'value': 'nkMAPI.csv'}]},\n",
+       " 'PV': {'options': [{'label': 'Yes', 'value': True},\n",
+       "   {'label': 'No', 'value': False}]}}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=======================================\n",
+      "I am a stack with the following layers:\n",
+      "=======================================\n",
+      "  Layer 1\n",
+      "    Material: nkLowFeGlass.csv\n",
+      "    Thickness: 4000\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -101,11 +186,26 @@
     "server = app.server\n",
     "\n",
     "#ART_fig = \n",
+    "Glass = wpv.Layer(4000,matmap['Low Fe Glass'],'i')\n",
+    "#FTO = wpv.Layer(0.3,'nkFTO','c')\n",
+    "#MAPI = wpv.Layer(0.06,'nkMAPI','c')\n",
+    "#Ag = wpv.Layer(0.01,'nkAg','c')\n",
+    "#TiO2lowE = wpv.Layer(0.02,'nkTiO2','c')\n",
+    "#EVA = wpv.Layer(1500,'nkEVA','i')\n",
     "\n",
     "\n",
+    "#layers = [Glass,FTO,MAPI,EVA,Glass,TiO2lowE,Ag,TiO2lowE]\n",
+    "layers = [Glass]\n",
     "\n",
+    "stack = wpv.Stack(layers)\n",
+    "\n",
+    "num_lams = 200\n",
+    "lambdas = np.linspace(0.3,2.5,num=num_lams)\n",
+    "i_ang = 0\n",
+    "    \n",
     "\n",
     "app.layout = dbc.Container([\n",
+    "    dcc.Store(id=\"store\"),\n",
     "    dbc.Container([\n",
     "        html.H4('PVwindow',className='display-4'),\n",
     "        html.P(\n",
@@ -118,7 +218,7 @@
     "    dbc.Container(\n",
     "        [\n",
     "             \n",
-    "             html.H6('Device Configuration',className='display-6'),#,class_name=\"me-md-1\"\n",
+    "             html.H6('Device Stack',className='display-6'),#,class_name=\"me-md-1\"\n",
     "             html.Span('Layer:',style={'display':'inline-block','font-size':'22px','width':'20%','height':'36px',\"verticalAlign\": \"center\",'text-align':'center'}),\n",
     "                 dbc.Button('+',color=\"primary\",id='button_add',style={'width':'20%','height':'36px'},n_clicks=0),\n",
     "             dbc.ButtonGroup([\n",
@@ -132,10 +232,10 @@
     "             html.Br(),\n",
     "             dash_table.DataTable(\n",
     "                 columns = [{'name':'Material','id':'Material','presentation': 'dropdown'},\n",
-    "                            {'name':'Thickness [nm]','id':'Thickness [nm]','presentation': 'input'},\n",
+    "                            {'name':'Thickness [μm]','id':'Thickness [μm]','presentation': 'input'},\n",
     "                            {'name':'PV','id':'PV','presentation': 'dropdown'}],\n",
-    "                 data=[{'Material':'a',\n",
-    "                       'Thickness [nm]':100,\n",
+    "                 data=[{'Material':'nkLowFeGlass.csv',\n",
+    "                       'Thickness [μm]':4000,\n",
     "                       'PV':False}],\n",
     "                 id = 'layer_table',\n",
     "                 editable=True,\n",
@@ -146,10 +246,7 @@
     "                 style_data={'text-align':'left'},\n",
     "                 dropdown={\n",
     "                    'Material': {\n",
-    "                        'options': [\n",
-    "                            {'label': i, 'value': i}\n",
-    "                            for i in ['a','b','c']\n",
-    "                        ]\n",
+    "                        'options': matoptions\n",
     "                    },\n",
     "                    'PV': {\n",
     "                         'options': [\n",
@@ -169,24 +266,46 @@
     "    \n",
     "    dbc.Container(\n",
     "        [\n",
-    "            html.H6('Device Analysis',className='display-6'),\n",
+    "            html.H6('Analysis',className='display-6'),\n",
     "            dbc.Tabs(\n",
     "            [\n",
-    "                dbc.Tab(label=\"A, R, T\", tab_id=\"tab-1\",tab_style={\"marginLeft\": \"auto\"}),\n",
+    "                dbc.Tab(label=\"A, R, T\", tab_id=\"rat-tab\",tab_style={\"marginLeft\": \"auto\"}),\n",
     "                dbc.Tab(label=\"Metrics\", tab_id=\"tab-2\"),\n",
     "            ],\n",
     "            id=\"tabs\",\n",
     "            active_tab=\"tab-1\",\n",
-    "        ),\n",
+    "            ),\n",
+    "            html.Div(id=\"tab-content\", className=\"p-4\"),\n",
     "        ],\n",
     "        style = {'float':'left','width':'50%'},\n",
-    "    )\n",
-    "    \n",
+    "    ),\n",
     "    ],\n",
     "    #fluid=True,\n",
     ")\n",
     "\n",
-    "\n",
+    "@app.callback(\n",
+    "    Output(\"tab-content\", \"children\"),\n",
+    "    [Input(\"tabs\", \"active_tab\"), Input(\"store\", \"data\")],\n",
+    ")\n",
+    "def render_tab_content(active_tab, data):\n",
+    "    \"\"\"\n",
+    "    This callback takes the 'active_tab' property as input, as well as the\n",
+    "    stored graphs, and renders the tab content depending on what the value of\n",
+    "    'active_tab' is.\n",
+    "    \"\"\"\n",
+    "    if active_tab and data is not None:\n",
+    "        if active_tab == \"rat-tab\":\n",
+    "            return dcc.Graph(figure=data[\"scatter\"])\n",
+    "        '''\n",
+    "        elif active_tab == \"histogram\":\n",
+    "            return dbc.Row(\n",
+    "                [\n",
+    "                    dbc.Col(dcc.Graph(figure=data[\"hist_1\"]), width=6),\n",
+    "                    dbc.Col(dcc.Graph(figure=data[\"hist_2\"]), width=6),\n",
+    "                ]\n",
+    "            )\n",
+    "        '''\n",
+    "    return \"No tab selected\"\n",
     "\n",
     "@app.callback(\n",
     "    Output('layer_table', 'data'),\n",
@@ -215,8 +334,31 @@
     "        if button_id == 'button_up':\n",
     "            print('moving row up')\n",
     "    #print(data)\n",
+    "    \n",
+    "    if n_clicks_solve > 0:\n",
+    "        print('move')\n",
+    "        stack.update_from_dash(data)\n",
+    "        [Rs,As,Ts] = stack.get_specular_RAT(lambdas,i_ang)\n",
+    "    \n",
+    "        fig = go.Figure()\n",
+    "        fig.add_trace(\n",
+    "            go.Scatter(\n",
+    "                x = lambdas,\n",
+    "                y = As,\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "    \n",
+    "    stack.self_summary()\n",
+    "    \n",
     "    return data\n",
     "\n",
+    "\"\"\"\n",
+    "put callback here whose input is the solve button (remove above) and whose output is a figure in the id='store' object\n",
+    "\"\"\"\n",
+    "\"\"\"\n",
+    "next fix the render_tab_content() one above\n",
+    "\"\"\"\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=True,mode='inline')"
@@ -225,7 +367,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9e41a6e-3076-4439-9813-8a23f02b7e51",
+   "id": "f0561e13-e325-4f05-90de-01bb4e382cf0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "648e6bd2-77f9-4c7d-aefb-d8a8d0a52ae1",
    "metadata": {},
    "outputs": [],
    "source": []
