GUI working for stack construction and ART plotting

--- a/app.ipynb
+++ b/app.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "097d6073",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'label': 'Low Fe Glass', 'value': 'nkLowFeGlass.csv'}, {'label': 'FTO', 'value': 'nkFTO.csv'}, {'label': 'MAPI', 'value': 'nkMAPI.csv'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from jupyter_dash import JupyterDash\n",
     "from dash import html, dcc, Input, Output, State\n",
@@ -37,14 +29,28 @@
     "matmap = {'Low Fe Glass':'nkLowFeGlass.csv',\n",
     "          'FTO':'nkFTO.csv',\n",
     "          'MAPI':'nkMAPI.csv',\n",
+    "          'Silver':'nkAg.csv',\n",
+    "          'AZO':'nkAZO.csv',\n",
+    "          'Bleached MAPI':'nkBleach.csv',\n",
+    "          'C60':'nkC60.csv',\n",
+    "          'ClAlPc':'nkClAlPc.csv',\n",
+    "          'EVA':'nkEVA.csv',\n",
+    "          'FTO':'nkFTO.csv',\n",
+    "          'ITO':'nkITO.csv',\n",
+    "          'MAPbBr₃':'nkMAPbBr3.csv',\n",
+    "          'NiO':'nkNiO.csv',\n",
+    "          'PTB7-Th:IEICO-4F':'nkPTB7_ThIEICO_4F.cvs',\n",
+    "          'SiO₂':'nkSiO2',\n",
+    "          'SnO₂ 1':'nkSnO2.csv',\n",
+    "          'SnO₂ 2':'nkSnO2_wBaseline.csv',\n",
+    "          'TiO₂':'nkTiO2.csv',\n",
     "         }\n",
-    "matoptions = [{'label': i, 'value': matmap[i]} for i in matmap]\n",
-    "print(matoptions)"
+    "matoptions = [{'label': i, 'value': matmap[i]} for i in matmap]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "497319a1",
    "metadata": {},
    "outputs": [
@@ -62,125 +68,20 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x175fcbb80>"
+       "<IPython.lib.display.IFrame at 0x1059cc250>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Material': {'options': [{'label': 'Low Fe Glass',\n",
-       "    'value': 'nkLowFeGlass.csv'},\n",
-       "   {'label': 'FTO', 'value': 'nkFTO.csv'},\n",
-       "   {'label': 'MAPI', 'value': 'nkMAPI.csv'}]},\n",
-       " 'PV': {'options': [{'label': 'Yes', 'value': True},\n",
-       "   {'label': 'No', 'value': False}]}}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=======================================\n",
-      "I am a stack with the following layers:\n",
-      "=======================================\n",
-      "  Layer 1\n",
-      "    Material: nkLowFeGlass.csv\n",
-      "    Thickness: 4000\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Material': {'options': [{'label': 'Low Fe Glass',\n",
-       "    'value': 'nkLowFeGlass.csv'},\n",
-       "   {'label': 'FTO', 'value': 'nkFTO.csv'},\n",
-       "   {'label': 'MAPI', 'value': 'nkMAPI.csv'}]},\n",
-       " 'PV': {'options': [{'label': 'Yes', 'value': True},\n",
-       "   {'label': 'No', 'value': False}]}}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=======================================\n",
-      "I am a stack with the following layers:\n",
-      "=======================================\n",
-      "  Layer 1\n",
-      "    Material: nkLowFeGlass.csv\n",
-      "    Thickness: 4000\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Material': {'options': [{'label': 'Low Fe Glass',\n",
-       "    'value': 'nkLowFeGlass.csv'},\n",
-       "   {'label': 'FTO', 'value': 'nkFTO.csv'},\n",
-       "   {'label': 'MAPI', 'value': 'nkMAPI.csv'}]},\n",
-       " 'PV': {'options': [{'label': 'Yes', 'value': True},\n",
-       "   {'label': 'No', 'value': False}]}}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=======================================\n",
-      "I am a stack with the following layers:\n",
-      "=======================================\n",
-      "  Layer 1\n",
-      "    Material: nkLowFeGlass.csv\n",
-      "    Thickness: 4000\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Material': {'options': [{'label': 'Low Fe Glass',\n",
-       "    'value': 'nkLowFeGlass.csv'},\n",
-       "   {'label': 'FTO', 'value': 'nkFTO.csv'},\n",
-       "   {'label': 'MAPI', 'value': 'nkMAPI.csv'}]},\n",
-       " 'PV': {'options': [{'label': 'Yes', 'value': True},\n",
-       "   {'label': 'No', 'value': False}]}}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=======================================\n",
-      "I am a stack with the following layers:\n",
-      "=======================================\n",
-      "  Layer 1\n",
-      "    Material: nkLowFeGlass.csv\n",
-      "    Thickness: 4000\n",
-      "\n"
-     ]
     }
    ],
    "source": [
     "#app = Dash(external_stylesheets=[dbc.themes.BOOTSTRAP])\n",
     "app = JupyterDash(__name__,external_stylesheets=[dbc.themes.JOURNAL])\n",
     "#app = JupyterDash(__name__,external_stylesheets=[dbc.themes.SANDSTONE])\n",
+    "\n",
+    "#fixes issue with non initialized selection in table\n",
+    "app.config.suppress_callback_exceptions = True\n",
     "\n",
     "# Create server variable with Flask server object for use with gunicorn\n",
     "server = app.server\n",
@@ -203,6 +104,9 @@
     "lambdas = np.linspace(0.3,2.5,num=num_lams)\n",
     "i_ang = 0\n",
     "    \n",
+    "Is = stack.Is(lambdas)/np.max(stack.Is(lambdas))\n",
+    "LEF = stack.cieplf(lambdas)\n",
+    "\n",
     "\n",
     "app.layout = dbc.Container([\n",
     "    dcc.Store(id=\"store\"),\n",
@@ -213,22 +117,24 @@
     "                className=\"\",\n",
     "        ),\n",
     "        html.Hr(className=\"my-2\"),\n",
+    "        #html.Div('this thing drags',style={'width':'300px','height':'100px','background-color':'yellow'},draggable='true'),\n",
+    "        #html.Div('this thing drags',style={'width':'300px','height':'100px','background-color':'red'},draggable='true'),\n",
     "    ]),\n",
-    "            \n",
+    "    # left side of interface  \n",
     "    dbc.Container(\n",
     "        [\n",
-    "             \n",
     "             html.H6('Device Stack',className='display-6'),#,class_name=\"me-md-1\"\n",
-    "             html.Span('Layer:',style={'display':'inline-block','font-size':'22px','width':'20%','height':'36px',\"verticalAlign\": \"center\",'text-align':'center'}),\n",
-    "                 dbc.Button('+',color=\"primary\",id='button_add',style={'width':'20%','height':'36px'},n_clicks=0),\n",
+    "             html.Span('Layer:',style={'display':'inline-block','font-size':'22px','width':'20%','height':'36px',\"verticalAlign\": \"center\",'text-align':'center','float':'left'}),\n",
+    "                 dbc.Button('+',color=\"primary\",id='button_add',style={'width':'10%','height':'36px','float':'left'},n_clicks=0),\n",
     "             dbc.ButtonGroup([\n",
     "                 dbc.Button('↑',outline=True,color=\"primary\",id='button_up',n_clicks=0),\n",
     "                 dbc.Button('↓',outline=True,color=\"primary\",id='button_down',n_clicks=0),\n",
     "             ],\n",
-    "             style={'width':'40%','height':'36px'}\n",
+    "             style={'width':'20%','height':'36px','float':'left'}\n",
     "             ),\n",
-    "             html.Br(),\n",
-    "             dbc.Button('Solve',id='button_solve',class_name='d-grid col-6 mx-auto',color='secondary',n_clicks=0),#style={'width':'60%'}\n",
+    "             #html.Br(),\n",
+    "             html.Div(style={'width':'5%','height':'36px','float':'left'}),\n",
+    "             dbc.Button('Solve',id='button_solve',style={'width':'20%','height':'36px'},color='secondary',n_clicks=0),#style={'width':'60%'},class_name='d-grid col-4 mx-auto'\n",
     "             html.Br(),\n",
     "             dash_table.DataTable(\n",
     "                 columns = [{'name':'Material','id':'Material','presentation': 'dropdown'},\n",
@@ -241,6 +147,7 @@
     "                 editable=True,\n",
     "                 row_selectable='single',\n",
     "                 row_deletable=True,\n",
+    "                 selected_rows=[0],\n",
     "                 style_as_list_view=True,\n",
     "                 style_header={'text-align':'left'},\n",
     "                 style_data={'text-align':'left'},\n",
@@ -255,15 +162,17 @@
     "                        ]\n",
     "                    }\n",
     "                },\n",
+    "                style_cell={'fontSize':16, 'font-family':'Arial, Helvetica, sans-serif'},\n",
     "                #workaround so bootstrap formatting works with dropdowns... see https://github.com/plotly/dash-table/issues/221\n",
-    "                css=[{\"selector\": \".Select-menu-outer\", \"rule\": \"display: block !important\"}],\n",
+    "                css=[{\"selector\": \".Select-menu-outer\", \n",
+    "                      \"rule\": \"display: block !important\"}],\n",
     "                 \n",
     "             ),\n",
     "            \n",
     "        ],\n",
     "        style = {'float':'left','width':'50%','border-right-style':'none','border-width':'thin'},\n",
     "    ),\n",
-    "    \n",
+    "    #right side of interface\n",
     "    dbc.Container(\n",
     "        [\n",
     "            html.H6('Analysis',className='display-6'),\n",
@@ -273,9 +182,9 @@
     "                dbc.Tab(label=\"Metrics\", tab_id=\"tab-2\"),\n",
     "            ],\n",
     "            id=\"tabs\",\n",
-    "            active_tab=\"tab-1\",\n",
+    "            active_tab=\"rat-tab\",\n",
     "            ),\n",
-    "            html.Div(id=\"tab-content\", className=\"p-4\"),\n",
+    "            html.Div(id=\"tab-content\",className=\"p-4\"),\n",
     "        ],\n",
     "        style = {'float':'left','width':'50%'},\n",
     "    ),\n",
@@ -283,6 +192,10 @@
     "    #fluid=True,\n",
     ")\n",
     "\n",
+    "\n",
+    "'''\n",
+    "The following leaned on this example: https://dash-bootstrap-components.opensource.faculty.ai/examples/graphs-in-tabs/\n",
+    "'''\n",
     "@app.callback(\n",
     "    Output(\"tab-content\", \"children\"),\n",
     "    [Input(\"tabs\", \"active_tab\"), Input(\"store\", \"data\")],\n",
@@ -295,7 +208,7 @@
     "    \"\"\"\n",
     "    if active_tab and data is not None:\n",
     "        if active_tab == \"rat-tab\":\n",
-    "            return dcc.Graph(figure=data[\"scatter\"])\n",
+    "            return dcc.Graph(figure=data[\"rat-fig\"])\n",
     "        '''\n",
     "        elif active_tab == \"histogram\":\n",
     "            return dbc.Row(\n",
@@ -305,26 +218,32 @@
     "                ]\n",
     "            )\n",
     "        '''\n",
-    "    return \"No tab selected\"\n",
+    "    return \"No data to display yet\"\n",
     "\n",
     "@app.callback(\n",
     "    Output('layer_table', 'data'),\n",
+    "    Output('layer_table', 'selected_rows'),\n",
     "    Input('button_add', 'n_clicks'),\n",
     "    Input('button_up','n_clicks'),\n",
     "    Input('button_down','n_clicks'),\n",
-    "    Input('button_solve','n_clicks'),\n",
     "    State('layer_table', 'data'),\n",
     "    State('layer_table', 'columns'),\n",
     "    State('layer_table', 'dropdown'),\n",
     "    State('layer_table', 'selected_rows')\n",
     ")\n",
-    "def add_row(n_clicks_add, n_clicks_up, n_clicks_down, n_clicks_solve, data, columns, ddown, srows):\n",
+    "def manipulate_stack(n_clicks_add, n_clicks_up, n_clicks_down, data, columns, ddown, srows):\n",
     "    ctx = callback_context\n",
     "    button_id = ctx.triggered[0]['prop_id'].split('.')[0]\n",
     "    #print('button id: ' + str(button_id))\n",
-    "    display(ddown)\n",
+    "    #display(ddown)\n",
     "    #x = {c['id']: '' for c in columns}\n",
     "    #print('x=' + str(x))\n",
+    "    \n",
+    "    new_selection=srows\n",
+    "    chosen=srows[0]\n",
+    "    \n",
+    "    nlayer = np.shape(data)[0]\n",
+    "    print(nlayer)\n",
     "    \n",
     "    if n_clicks_add > 0:\n",
     "        if button_id == 'button_add':\n",
@@ -332,33 +251,136 @@
     "    \n",
     "    if n_clicks_up > 0:\n",
     "        if button_id == 'button_up':\n",
-    "            print('moving row up')\n",
+    "            if nlayer>0 and chosen>0:\n",
+    "                print('old srows: ' + str(srows))\n",
+    "                # popping both the elements from list\n",
+    "                first_ele = data.pop(chosen)  \n",
+    "                # inserting in each others positions\n",
+    "                data.insert(chosen-1, first_ele) \n",
+    "                \n",
+    "                new_selection = [chosen-1]\n",
+    "                print('new srows: ' + str(new_selection))\n",
+    "            else:\n",
+    "                print('nothing to move')\n",
+    "                \n",
+    "    if n_clicks_down > 0:\n",
+    "        if button_id == 'button_down':\n",
+    "            if nlayer>0 and chosen<nlayer:\n",
+    "                # popping both the elements from list\n",
+    "                first_ele = data.pop(chosen)  \n",
+    "                # inserting in each others positions\n",
+    "                data.insert(chosen+1, first_ele) \n",
+    "                new_selection = [chosen+1]\n",
+    "            else:\n",
+    "                print('nothing to move')\n",
     "    #print(data)\n",
+    "        \n",
     "    \n",
-    "    if n_clicks_solve > 0:\n",
-    "        print('move')\n",
-    "        stack.update_from_dash(data)\n",
-    "        [Rs,As,Ts] = stack.get_specular_RAT(lambdas,i_ang)\n",
+    "    #stack.self_summary()\n",
+    "    print(new_selection)\n",
+    "    return data, new_selection\n",
+    "\n",
+    "\"\"\"\n",
+    "put callback here whose input is the solve button (remove above) and whose output is a figure in the id='store' object... \n",
+    "should return a dictionary with keys for each figure (rat-fig)\n",
+    "\"\"\"\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output('store','data'),\n",
+    "    Input('button_solve','n_clicks'),\n",
+    "    State('layer_table', 'data'),\n",
+    ")\n",
+    "def make_figures(n_clicks,data_from_table):\n",
     "    \n",
-    "        fig = go.Figure()\n",
+    "    fig = go.Figure()\n",
+    "    \n",
+    "    fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=lambdas,\n",
+    "            y=LEF,\n",
+    "            name='LEF',\n",
+    "            showlegend=True,\n",
+    "            line = dict(color='gray',width=1, dash='solid'),\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=lambdas,\n",
+    "            y=Is,\n",
+    "            name='Solar',\n",
+    "            showlegend=True,\n",
+    "            line = dict(color='goldenrod',width=1, dash='solid'),\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    stack.update_from_dash(data_from_table)\n",
+    "    \n",
+    "    pvabs = stack.get_specular_PV_abs(lambdas,i_ang)\n",
+    "    fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=lambdas,\n",
+    "            y=pvabs,\n",
+    "            name='A<sub>PV</sub>',\n",
+    "            showlegend=True,\n",
+    "            line = dict(color='red',width=1, dash='dot'),\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    spectra = stack.get_specular_RAT(lambdas,i_ang)\n",
+    "    spec_names = ['Reflectivity','Absorptivity','Transmissivity']\n",
+    "    colors = ['black','red','blue']\n",
+    "    for spectrum,spec_name,color in zip(spectra,spec_names,colors):\n",
     "        fig.add_trace(\n",
     "            go.Scatter(\n",
     "                x = lambdas,\n",
-    "                y = As,\n",
+    "                y = spectrum,\n",
+    "                name=spec_name,\n",
+    "                showlegend=True,\n",
+    "                line = dict(color=color,width=3, dash='solid'),\n",
     "            )\n",
     "        )\n",
+    "    \n",
     "        \n",
-    "    \n",
-    "    stack.self_summary()\n",
-    "    \n",
-    "    return data\n",
+    "    if n_clicks == 0:\n",
+    "        fig.for_each_trace(lambda trace: trace.update(visible=\"legendonly\"))\n",
+    "    else:\n",
+    "        fig.for_each_trace(lambda trace: trace.update(visible=True))\n",
+    "        \n",
+    "    fig.update_layout(\n",
+    "        xaxis_title=\"Wavelength, um\",\n",
+    "        margin=dict(l=0,r=0,t=90,b=0),\n",
+    "        legend=dict(\n",
+    "            orientation=\"h\",\n",
+    "            yanchor=\"bottom\",\n",
+    "            y=1.02,\n",
+    "            xanchor=\"right\",\n",
+    "            x=1\n",
+    "        ),\n",
+    "        font=dict(\n",
+    "            family = \"Arial, Helvetica, sans-serif\",\n",
+    "            size=16,\n",
+    "        ),\n",
+    "        plot_bgcolor = 'rgba(0,0,0,0)',\n",
+    "        paper_bgcolor = 'rgba(0,0,0,0)',\n",
+    "        legend_font_size = 12,\n",
+    "    )\n",
+    "    fig.update_xaxes(showline=True,\n",
+    "                 linewidth=0.5,\n",
+    "                 linecolor='black',\n",
+    "                 #mirror=True,\n",
+    "                 ticks='outside')\n",
     "\n",
-    "\"\"\"\n",
-    "put callback here whose input is the solve button (remove above) and whose output is a figure in the id='store' object\n",
-    "\"\"\"\n",
-    "\"\"\"\n",
-    "next fix the render_tab_content() one above\n",
-    "\"\"\"\n",
+    "    fig.update_yaxes(showline=True,\n",
+    "                 linewidth=0.5,\n",
+    "                 linecolor='black',\n",
+    "                 #mirror=True,\n",
+    "                 ticks='outside')\n",
+    "\n",
+    "    stack.self_summary()\n",
+    "        \n",
+    "    return {'rat-fig':fig}\n",
+    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=True,mode='inline')"
