figured out colour-science... not easy, but sustainable and done. See example for repo script

--- a/app.ipynb
+++ b/app.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "497319a1",
    "metadata": {},
    "outputs": [
@@ -68,11 +68,24 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1059cc250>"
+       "<IPython.lib.display.IFrame at 0x145b783d0>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[0]\n",
+      "pvlayer: 0\n",
+      "lnum: 1\n",
+      "False\n",
+      "True\n",
+      "no PV\n"
+     ]
     }
    ],
    "source": [
@@ -179,7 +192,7 @@
     "            dbc.Tabs(\n",
     "            [\n",
     "                dbc.Tab(label=\"A, R, T\", tab_id=\"rat-tab\",tab_style={\"marginLeft\": \"auto\"}),\n",
-    "                dbc.Tab(label=\"Metrics\", tab_id=\"tab-2\"),\n",
+    "                dbc.Tab(label=\"Metrics\", tab_id=\"metrics-tab\"),\n",
     "            ],\n",
     "            id=\"tabs\",\n",
     "            active_tab=\"rat-tab\",\n",
@@ -209,15 +222,11 @@
     "    if active_tab and data is not None:\n",
     "        if active_tab == \"rat-tab\":\n",
     "            return dcc.Graph(figure=data[\"rat-fig\"])\n",
-    "        '''\n",
-    "        elif active_tab == \"histogram\":\n",
-    "            return dbc.Row(\n",
-    "                [\n",
-    "                    dbc.Col(dcc.Graph(figure=data[\"hist_1\"]), width=6),\n",
-    "                    dbc.Col(dcc.Graph(figure=data[\"hist_2\"]), width=6),\n",
-    "                ]\n",
-    "            )\n",
-    "        '''\n",
+    "        \n",
+    "        elif active_tab == \"metrics-tab\":\n",
+    "            stuff = data['metric-stuff']\n",
+    "            return html.Div(stuff)\n",
+    "            \n",
     "    return \"No data to display yet\"\n",
     "\n",
     "@app.callback(\n",
@@ -359,7 +368,7 @@
     "        ),\n",
     "        font=dict(\n",
     "            family = \"Arial, Helvetica, sans-serif\",\n",
-    "            size=16,\n",
+    "            size=14,\n",
     "        ),\n",
     "        plot_bgcolor = 'rgba(0,0,0,0)',\n",
     "        paper_bgcolor = 'rgba(0,0,0,0)',\n",
@@ -377,9 +386,9 @@
     "                 #mirror=True,\n",
     "                 ticks='outside')\n",
     "\n",
-    "    stack.self_summary()\n",
+    "    #stack.self_summary()\n",
     "        \n",
-    "    return {'rat-fig':fig}\n",
+    "    return {'rat-fig':fig,'metric-stuff':'test'}\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
