transmitted color now calculated in wpv  works with GUI

--- a/app.ipynb
+++ b/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "097d6073",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "497319a1",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x145b783d0>"
+       "<IPython.lib.display.IFrame at 0x17eae3d90>"
       ]
      },
      "metadata": {},
@@ -84,7 +84,89 @@
       "lnum: 1\n",
       "False\n",
       "True\n",
-      "no PV\n"
+      "no PV\n",
+      "{'color': '#fff2dc', 'chromaticity': '#fff2dc'}\n",
+      "pvlayer: 0\n",
+      "lnum: 1\n",
+      "False\n",
+      "True\n",
+      "no PV\n",
+      "{'color': '#fff1dd', 'chromaticity': '#fff1dd'}\n",
+      "pvlayer: 0\n",
+      "lnum: 1\n",
+      "False\n",
+      "True\n",
+      "no PV\n",
+      "{'color': '#fff2dd', 'chromaticity': '#fff2dd'}\n",
+      "pvlayer: 0\n",
+      "lnum: 1\n",
+      "False\n",
+      "True\n",
+      "no PV\n",
+      "{'color': '#fff2dd', 'chromaticity': '#fff2dd'}\n",
+      "pvlayer: 0\n",
+      "lnum: 1\n",
+      "False\n",
+      "True\n",
+      "no PV\n",
+      "{'color': '#fff2dd', 'chromaticity': '#fff2dd'}\n",
+      "1\n",
+      "[0]\n",
+      "pvlayer: 0\n",
+      "lnum: 1\n",
+      "False\n",
+      "True\n",
+      "no PV\n",
+      "{'color': '#fff2dc', 'chromaticity': '#fff2dc'}\n",
+      "pvlayer: 0\n",
+      "lnum: 1\n",
+      "False\n",
+      "True\n",
+      "no PV\n",
+      "{'color': '#fff2dc', 'chromaticity': '#fff2dc'}\n",
+      "pvlayer: 0\n",
+      "lnum: 1\n",
+      "False\n",
+      "True\n",
+      "no PV\n",
+      "{'color': '#fff2dd', 'chromaticity': '#fff2dd'}\n",
+      "1\n",
+      "[0]\n",
+      "pvlayer: 2\n",
+      "lnum: 2\n",
+      "True\n",
+      "False\n",
+      "{'color': '#520f00', 'chromaticity': '#ff2f00'}\n",
+      "pvlayer: 0\n",
+      "lnum: 1\n",
+      "False\n",
+      "True\n",
+      "no PV\n",
+      "{'color': '#fff2dc', 'chromaticity': '#fff2dc'}\n",
+      "pvlayer: 0\n",
+      "lnum: 1\n",
+      "False\n",
+      "True\n",
+      "no PV\n",
+      "{'color': '#fff1dd', 'chromaticity': '#fff1dd'}\n",
+      "pvlayer: 0\n",
+      "lnum: 1\n",
+      "False\n",
+      "True\n",
+      "no PV\n",
+      "{'color': '#fff1dd', 'chromaticity': '#fff1dd'}\n",
+      "pvlayer: 0\n",
+      "lnum: 1\n",
+      "False\n",
+      "True\n",
+      "no PV\n",
+      "{'color': '#fffce6', 'chromaticity': '#fffce6'}\n",
+      "pvlayer: 0\n",
+      "lnum: 1\n",
+      "False\n",
+      "True\n",
+      "no PV\n",
+      "{'color': '#fffce6', 'chromaticity': '#fffce6'}\n"
      ]
     }
    ],
@@ -224,8 +306,15 @@
     "            return dcc.Graph(figure=data[\"rat-fig\"])\n",
     "        \n",
     "        elif active_tab == \"metrics-tab\":\n",
-    "            stuff = data['metric-stuff']\n",
-    "            return html.Div(stuff)\n",
+    "            color = data['metric-stuff']['color']\n",
+    "            chromaticity = data['metric-stuff']['chromaticity']\n",
+    "            \n",
+    "            thestuff = []\n",
+    "            thestuff.append(html.Div('Transmitted color',style={'width':'100px','background-color':color}))\n",
+    "            thestuff.append(html.Div('Transmitted chromaticity',style={'width':'100px','background-color':chromaticity}))\n",
+    "                            \n",
+    "            \n",
+    "            return thestuff\n",
     "            \n",
     "    return \"No data to display yet\"\n",
     "\n",
@@ -292,6 +381,8 @@
     "\"\"\"\n",
     "put callback here whose input is the solve button (remove above) and whose output is a figure in the id='store' object... \n",
     "should return a dictionary with keys for each figure (rat-fig)\n",
+    "...\n",
+    "Now adding outputs for analysis tab: color, chromaticity, PCE, SHGC...\n",
     "\"\"\"\n",
     "\n",
     "@app.callback(\n",
@@ -387,8 +478,10 @@
     "                 ticks='outside')\n",
     "\n",
     "    #stack.self_summary()\n",
+    "    colorstuff = stack.get_transmitted_color(lambdas,i_ang)\n",
+    "    print(colorstuff)\n",
     "        \n",
-    "    return {'rat-fig':fig,'metric-stuff':'test'}\n",
+    "    return {'rat-fig':fig,'metric-stuff':colorstuff}\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
