--- a/app.ipynb
+++ b/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "097d6073",
    "metadata": {},
    "outputs": [],
@@ -39,8 +39,8 @@
     "          'ITO':'nkITO.csv',\n",
     "          'MAPbBr₃':'nkMAPbBr3.csv',\n",
     "          'NiO':'nkNiO.csv',\n",
-    "          'PTB7-Th:IEICO-4F':'nkPTB7_ThIEICO_4F.cvs',\n",
-    "          'SiO₂':'nkSiO2',\n",
+    "          'PTB7-Th:IEICO-4F':'nkPTB7_ThIEICO_4F.csv',\n",
+    "          'SiO₂':'nkSiO2.csv',\n",
     "          'SnO₂ 1':'nkSnO2.csv',\n",
     "          'SnO₂ 2':'nkSnO2_wBaseline.csv',\n",
     "          'TiO₂':'nkTiO2.csv',\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "497319a1",
    "metadata": {},
    "outputs": [
@@ -68,106 +68,11 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x17eae3d90>"
+       "<IPython.lib.display.IFrame at 0x280a3b460>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "[0]\n",
-      "pvlayer: 0\n",
-      "lnum: 1\n",
-      "False\n",
-      "True\n",
-      "no PV\n",
-      "{'color': '#fff2dc', 'chromaticity': '#fff2dc'}\n",
-      "pvlayer: 0\n",
-      "lnum: 1\n",
-      "False\n",
-      "True\n",
-      "no PV\n",
-      "{'color': '#fff1dd', 'chromaticity': '#fff1dd'}\n",
-      "pvlayer: 0\n",
-      "lnum: 1\n",
-      "False\n",
-      "True\n",
-      "no PV\n",
-      "{'color': '#fff2dd', 'chromaticity': '#fff2dd'}\n",
-      "pvlayer: 0\n",
-      "lnum: 1\n",
-      "False\n",
-      "True\n",
-      "no PV\n",
-      "{'color': '#fff2dd', 'chromaticity': '#fff2dd'}\n",
-      "pvlayer: 0\n",
-      "lnum: 1\n",
-      "False\n",
-      "True\n",
-      "no PV\n",
-      "{'color': '#fff2dd', 'chromaticity': '#fff2dd'}\n",
-      "1\n",
-      "[0]\n",
-      "pvlayer: 0\n",
-      "lnum: 1\n",
-      "False\n",
-      "True\n",
-      "no PV\n",
-      "{'color': '#fff2dc', 'chromaticity': '#fff2dc'}\n",
-      "pvlayer: 0\n",
-      "lnum: 1\n",
-      "False\n",
-      "True\n",
-      "no PV\n",
-      "{'color': '#fff2dc', 'chromaticity': '#fff2dc'}\n",
-      "pvlayer: 0\n",
-      "lnum: 1\n",
-      "False\n",
-      "True\n",
-      "no PV\n",
-      "{'color': '#fff2dd', 'chromaticity': '#fff2dd'}\n",
-      "1\n",
-      "[0]\n",
-      "pvlayer: 2\n",
-      "lnum: 2\n",
-      "True\n",
-      "False\n",
-      "{'color': '#520f00', 'chromaticity': '#ff2f00'}\n",
-      "pvlayer: 0\n",
-      "lnum: 1\n",
-      "False\n",
-      "True\n",
-      "no PV\n",
-      "{'color': '#fff2dc', 'chromaticity': '#fff2dc'}\n",
-      "pvlayer: 0\n",
-      "lnum: 1\n",
-      "False\n",
-      "True\n",
-      "no PV\n",
-      "{'color': '#fff1dd', 'chromaticity': '#fff1dd'}\n",
-      "pvlayer: 0\n",
-      "lnum: 1\n",
-      "False\n",
-      "True\n",
-      "no PV\n",
-      "{'color': '#fff1dd', 'chromaticity': '#fff1dd'}\n",
-      "pvlayer: 0\n",
-      "lnum: 1\n",
-      "False\n",
-      "True\n",
-      "no PV\n",
-      "{'color': '#fffce6', 'chromaticity': '#fffce6'}\n",
-      "pvlayer: 0\n",
-      "lnum: 1\n",
-      "False\n",
-      "True\n",
-      "no PV\n",
-      "{'color': '#fffce6', 'chromaticity': '#fffce6'}\n"
-     ]
     }
    ],
    "source": [
@@ -309,9 +214,14 @@
     "            color = data['metric-stuff']['color']\n",
     "            chromaticity = data['metric-stuff']['chromaticity']\n",
     "            \n",
-    "            thestuff = []\n",
-    "            thestuff.append(html.Div('Transmitted color',style={'width':'100px','background-color':color}))\n",
-    "            thestuff.append(html.Div('Transmitted chromaticity',style={'width':'100px','background-color':chromaticity}))\n",
+    "            thestuff = [\n",
+    "                html.Span('Transmitted color: ',style={'display':'inline-block','font-size':'16px','width':'40%','height':'36px',\"verticalAlign\": \"center\",'text-align':'center','float':'left'}),\n",
+    "                dbc.Button('  ',style={'width':'100px','height':'36px','background-color':color,'border-color':'black'}),\n",
+    "                html.Br(),\n",
+    "                html.Span('Transmitted chromaticity: ',style={'display':'inline-block','font-size':'16px','width':'40%','height':'36px',\"verticalAlign\": \"center\",'text-align':'center','float':'left'}),\n",
+    "                dbc.Button('  ',style={'width':'100px','height':'36px','background-color':chromaticity,'border-color':'black'})\n",
+    "            ]\n",
+    "            \n",
     "                            \n",
     "            \n",
     "            return thestuff\n",
@@ -341,7 +251,7 @@
     "    chosen=srows[0]\n",
     "    \n",
     "    nlayer = np.shape(data)[0]\n",
-    "    print(nlayer)\n",
+    "    #print(nlayer)\n",
     "    \n",
     "    if n_clicks_add > 0:\n",
     "        if button_id == 'button_add':\n",
@@ -350,14 +260,14 @@
     "    if n_clicks_up > 0:\n",
     "        if button_id == 'button_up':\n",
     "            if nlayer>0 and chosen>0:\n",
-    "                print('old srows: ' + str(srows))\n",
+    "                #print('old srows: ' + str(srows))\n",
     "                # popping both the elements from list\n",
     "                first_ele = data.pop(chosen)  \n",
     "                # inserting in each others positions\n",
     "                data.insert(chosen-1, first_ele) \n",
     "                \n",
     "                new_selection = [chosen-1]\n",
-    "                print('new srows: ' + str(new_selection))\n",
+    "                #print('new srows: ' + str(new_selection))\n",
     "            else:\n",
     "                print('nothing to move')\n",
     "                \n",
@@ -375,7 +285,7 @@
     "        \n",
     "    \n",
     "    #stack.self_summary()\n",
-    "    print(new_selection)\n",
+    "    #print(new_selection)\n",
     "    return data, new_selection\n",
     "\n",
     "\"\"\"\n",
@@ -479,7 +389,7 @@
     "\n",
     "    #stack.self_summary()\n",
     "    colorstuff = stack.get_transmitted_color(lambdas,i_ang)\n",
-    "    print(colorstuff)\n",
+    "    #print(colorstuff)\n",
     "        \n",
     "    return {'rat-fig':fig,'metric-stuff':colorstuff}\n",
     "\n",
